--- a/index.html
+++ b/index.html
@@ -30,7 +30,25 @@
       -webkit-appearance: none; 
       margin: 0; 
     }
-    /* Esconder scrollbar mantendo funcionalidade */
+    
+    /* Barra de rolagem amigável para idosos (mais larga e visível) */
+    .custom-scrollbar::-webkit-scrollbar {
+      height: 12px;
+      width: 12px;
+    }
+    .custom-scrollbar::-webkit-scrollbar-track {
+      background: #f1f5f9;
+      border-radius: 10px;
+    }
+    .custom-scrollbar::-webkit-scrollbar-thumb {
+      background: #c7d2fe;
+      border-radius: 10px;
+      border: 3px solid #f1f5f9;
+    }
+    .custom-scrollbar::-webkit-scrollbar-thumb:hover {
+      background: #818cf8;
+    }
+
     .scrollbar-hide::-webkit-scrollbar { display: none; }
     .scrollbar-hide { -ms-overflow-style: none; scrollbar-width: none; }
   </style>
