--- a/index.html
+++ b/index.html
@@ -4,64 +4,38 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bolão - Copa 2026</title>
-  <script>
-    // Correção robusta para Trusted Types
-    if (window.trustedTypes && window.trustedTypes.createPolicy) {
-      if (!window.trustedTypes.defaultPolicy) {
-        window.trustedTypes.createPolicy('default', {
-          createHTML: (string) => string,
-          createScriptURL: (string) => string,
-          createScript: (string) => string,
-        });
-      }
-    }
-  </script>
+  <title>Simulador Copa 2026</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <style>
-    body { 
-      font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; 
-      -webkit-font-smoothing: antialiased;
-    }
+    body { font-family: 'Inter', sans-serif; -webkit-font-smoothing: antialiased; }
     .glass { background: rgba(255, 255, 255, 0.85); backdrop-filter: blur(12px); }
-    input[type=number]::-webkit-inner-spin-button, 
-    input[type=number]::-webkit-outer-spin-button { 
-      -webkit-appearance: none; 
-      margin: 0; 
-    }
-    
-    .custom-scrollbar::-webkit-scrollbar {
-      height: 12px;
-      width: 12px;
-    }
-    .custom-scrollbar::-webkit-scrollbar-track {
-      background: #f1f5f9;
-      border-radius: 10px;
-    }
-    .custom-scrollbar::-webkit-scrollbar-thumb {
-      background: #c7d2fe;
-      border-radius: 10px;
-      border: 3px solid #f1f5f9;
-    }
-    .custom-scrollbar::-webkit-scrollbar-thumb:hover {
-      background: #818cf8;
-    }
   </style>
-<script type="importmap">
-{
-  "imports": {
-    "react": "https://esm.sh/react@^19.2.4",
-    "react/": "https://esm.sh/react@^19.2.4/",
-    "react-dom": "https://esm.sh/react-dom@^19.2.4",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.45.0"
+  <script type="importmap">
+  {
+    "imports": {
+      "react": "https://esm.sh/react@19.0.0",
+      "react/": "https://esm.sh/react@19.0.0/",
+      "react-dom": "https://esm.sh/react-dom@19.0.0",
+      "react-dom/": "https://esm.sh/react-dom@19.0.0/",
+      "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.45.0"
+    }
   }
-}
-</script>
+  </script>
 </head>
-<body class="bg-slate-50 text-slate-900 selection:bg-indigo-100 selection:text-indigo-900">
-  <div id="root"></div>
+<body class="bg-slate-50 text-slate-900">
+  <div id="root">
+    <!-- Texto de fallback para confirmar que o HTML carregou -->
+    <div style="height: 100vh; display: flex; align-items: center; justify-content: center; font-family: sans-serif; color: #6366f1; font-weight: bold; flex-direction: column; gap: 10px;">
+      <div style="width: 30px; height: 30px; border: 3px solid #e2e8f0; border-top-color: #6366f1; border-radius: 50%; animation: spin 1s linear infinite;"></div>
+      Iniciando Simulador...
+    </div>
+  </div>
+  <style>
+    @keyframes spin { to { transform: rotate(360deg); } }
+  </style>
+  
+  <!-- ESTA TAG É OBRIGATÓRIA PARA O APP FUNCIONAR -->
   <script type="module" src="./index.tsx"></script>
 </body>
 </html>
