--- a/index.html
+++ b/index.html
@@ -4,38 +4,53 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Simulador Copa 2026</title>
+  <title>Copa 2026 Simulator</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
   <style>
-    body { font-family: 'Inter', sans-serif; -webkit-font-smoothing: antialiased; }
-    .glass { background: rgba(255, 255, 255, 0.85); backdrop-filter: blur(12px); }
-  </style>
-  <script type="importmap">
-  {
-    "imports": {
-      "react": "https://esm.sh/react@19.0.0",
-      "react/": "https://esm.sh/react@19.0.0/",
-      "react-dom": "https://esm.sh/react-dom@19.0.0",
-      "react-dom/": "https://esm.sh/react-dom@19.0.0/",
-      "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.45.0"
+    body { font-family: 'Inter', sans-serif; margin: 0; background-color: #f8fafc; }
+    .glass { background: rgba(255, 255, 255, 0.8); backdrop-filter: blur(10px); }
+    #loader {
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 16px;
+      color: #4f46e5;
+      font-weight: 800;
     }
-  }
-  </script>
-</head>
-<body class="bg-slate-50 text-slate-900">
-  <div id="root">
-    <!-- Texto de fallback para confirmar que o HTML carregou -->
-    <div style="height: 100vh; display: flex; align-items: center; justify-content: center; font-family: sans-serif; color: #6366f1; font-weight: bold; flex-direction: column; gap: 10px;">
-      <div style="width: 30px; height: 30px; border: 3px solid #e2e8f0; border-top-color: #6366f1; border-radius: 50%; animation: spin 1s linear infinite;"></div>
-      Iniciando Simulador...
-    </div>
-  </div>
-  <style>
+    .spinner {
+      width: 40px;
+      height: 40px;
+      border: 4px solid #e2e8f0;
+      border-top-color: #4f46e5;
+      border-radius: 50%;
+      animation: spin 0.8s linear infinite;
+    }
     @keyframes spin { to { transform: rotate(360deg); } }
   </style>
-  
-  <!-- ESTA TAG É OBRIGATÓRIA PARA O APP FUNCIONAR -->
+  <script type="importmap">
+{
+  "imports": {
+    "react": "https://esm.sh/react@19.0.0",
+    "react/": "https://esm.sh/react@19.0.0/",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.45.0",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.4/"
+  }
+}
+</script>
+</head>
+<body>
+  <div id="root">
+    <div id="loader">
+      <div class="spinner"></div>
+      <p>CARREGANDO SIMULADOR...</p>
+    </div>
+  </div>
+  <!-- O SCRIPT ABAIXO É O QUE INICIA O REACT. ELE PRECISA ESTAR AQUI. -->
   <script type="module" src="./index.tsx"></script>
 </body>
 </html>
