--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <style>
     body { font-family: 'Inter', sans-serif; margin: 0; background-color: #f8fafc; }
     .glass { background: rgba(255, 255, 255, 0.8); backdrop-filter: blur(10px); }
+    input[type="password"]::-ms-reveal,
+    input[type="password"]::-ms-clear {
+      display: none;
+    }
     #loader {
       height: 100vh;
       display: flex;
